--- a/catalog.html
+++ b/catalog.html
@@ -50,21 +50,80 @@
 <!-- INTERIOR PACKAGE -->
 <!-- section.package>.package__wrapper>.package_theme>.package__left>img+.package__right>h2+p -->
 <section class="package">
-    <div class="package__wrapper">
-        <h2></h2>
-        <div class="package_theme">
-            <div class="package__left">
-                <img src="img/minimalist.png" alt="">
-                <img src="img/retro.png" alt="">
-                <img src="img/shabby-chic.png" alt="">
-                <div class="package__right">
-                    <h2></h2>
-                    <p></p>
-                </div>
-            </div>
+    <div class="package_wrapper">
+      <h2>Interior Design Package</h2>
+      <div class="package_theme">
+        <div class="package_left">
+          <img src="./img/catalog-1.png" alt="" />
         </div>
+        <div class="package_right">
+          <h2>Minimalist Theme</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+            vulputate magna ornare ullamcorper nec vitae ante. Integer
+            hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+            volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+            eget purus. Phasellus condimentum tellus eu velit eleifend, at
+            bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+            vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+            suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+            nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+            mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+            tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+            sapien ut leo sagittis, at pretium sem faucibus.
+          </p>
+        </div>
+      </div>
+      <div class="package_theme">
+        <div class="package_left">
+          <img src="./img/catalog-2.png" alt="" />
+        </div>
+        <div class="package_right">
+          <h2>Retro Theme</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+            vulputate magna ornare ullamcorper nec vitae ante. Integer
+            hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+            volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+            eget purus. Phasellus condimentum tellus eu velit eleifend, at
+            bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+            vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+            suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+            nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+            mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+            tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+            sapien ut leo sagittis, at pretium sem faucibus.
+          </p>
+        </div>
+      </div>
+      <div class="package_theme">
+        <div class="package_left">
+          <img src="./img/catalog-3.png" alt="" />
+        </div>
+        <div class="package_right">
+          <h2>Minimalist Theme</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            iaculis suscipit ipsum sit amet laoreet. Nam sit amet enim
+            vulputate magna ornare ullamcorper nec vitae ante. Integer
+            hendrerit ligula sit amet tortor pulvinar suscipit. Vestibulum et
+            volutpat enim. Donec nisl velit, volutpat ut fermentum ut, egestas
+            eget purus. Phasellus condimentum tellus eu velit eleifend, at
+            bibendum diam gravida. In dictum nisl id leo tincidunt, vel
+            vestibulum metus sollicitudin. Praesent blandit leo vitae ultrices
+            suscipit. Etiam elementum ornare neque at dictum. Curabitur nisi
+            nibh, molestie sed fermentum sed, mollis id neque. In at ipsum
+            mattis, consequat orci vitae, mattis ipsum. Nam libero magna,
+            tincidunt et eleifend a, elementum malesuada nibh. Maecenas ornare
+            sapien ut leo sagittis, at pretium sem faucibus.
+          </p>
+        </div>
+      </div>
+      
     </div>
-</section>
+  </section>
 
 
 
