--- a/contacts.html
+++ b/contacts.html
@@ -42,6 +42,7 @@
                     <form actions="">
                         <input type="text" placeholder="Name">
                         <input type="text" placeholder="Email">
+                        <h3>message</h3>
                         <textarea name="" id="" cols="30" rows="10">
                         </textarea>
                         <button>Send</button>
